# thunderbird-mcp

./: CLAUDE.md  Cargo.toml  LICENSE  flake.nix  thunderbird-cli.cjs
docs/upstream-analysis/: _overview.md  issue-2.md  issue-5.md  issue-8.md  issue-9.md  pr-1.md  pr-10.md  pr-11.md  pr-12.md  pr-3.md  pr-4.md  pr-6.md  pr-7.md
extension/: manifest.json
extension/mcp_server/: api.js
src/: client.rs
