[package]
name = "thunderbird-api"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Bridge and CLI for Thunderbird email"

[[bin]]
name = "thunderbird-api"
path = "src/bin/thunderbird_api.rs"

[[bin]]
name = "thunderbird-cli"
path = "src/bin/thunderbird_cli.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
